2007-12-08  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/hc/src/hc-style.c: (hc_draw_shadow),
	(hc_draw_shadow_gap), (hc_draw_extension):
	Now *really* fixed :)

2007-12-08  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/hc/src/hc-style.c: (hc_draw_shadow),
	(hc_draw_shadow_gap), (hc_draw_extension):
	Fix #501816

2007-12-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_menubar):
        Fix array overrun. (Bug #501612, reported by coverity)

2007-12-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/support/widget-information.c:
	(ge_combo_box_is_using_list):
	Removed some dead code. (Bug #501611, reported by coverity)

2007-12-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.13.1 release.

2007-12-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/hc/src/hc-style.c: (hc_draw_shadow),
	(hc_draw_shadow_gap), (hc_draw_extension):
	Fix some outline drawings. Fixes bug #486418 at least partially.

2007-12-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/hc/src/hc_gtk2_support.c: (hc_simple_border_gap_clip),
	(do_hc_draw_arrow):
	Minor changes to the code (use cairo_close_path instead of
	explicitly going back to the start point.)

2007-12-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/support/cairo-support.c: (ge_cairo_inner_rectangle),
	(ge_cairo_inner_rounded_rectangle):
	* engines/support/cairo-support.h:
	Add ge_cairo_inner_rectangle and ge_cairo_inner_rounded_rectangle
	functions.

2007-12-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* schema/clearlooks.xml.in.in:
	Fixed the descriptions of the animations and colorize_scrollbar
	options. Thanks for Werner Pantke for pointing this out.

2007-11-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c: (clearlooks_draw_tab):
	* engines/clearlooks/src/clearlooks_draw_gummy.c: