@@ -94,6 +94,7 @@ typedef enum
 typedef enum
 {
 	CL_FOCUS_BUTTON,
+	CL_FOCUS_BUTTON_FLAT,
 	CL_FOCUS_LABEL,
 	CL_FOCUS_TREEVIEW,
 	CL_FOCUS_TREEVIEW_HEADER,
